--- a/index.html
+++ b/index.html
@@ -1,44 +1,74 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>
-        Michael Yu | A01041867 | Set 4O
+      Michael Yu | A01041867 | Set 4O
     </title>
-    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito&display=swap"
+      rel="stylesheet"
+    />
     <style>
-        body {
-            background-color: #F0E9E4;
-            font-family: 'Nunito', sans-serif;
-            padding: 40px;
-        }
+      body {
+        background-color: #f0e9e4;
+        font-family: "Nunito", sans-serif;
+        padding: 40px;
+      }
     </style>
-</head>
-<body>
-<h1>
-    Michael Yu
-</h1>
+  </head>
+  <body>
+    <h1>
+      Michael Yu
+    </h1>
 
-<table>
-    <tr>
+    <table>
+      <tr>
         <th>Courses (Winter 2020)</th>
         <th>&nbsp;&nbsp;&nbsp;4711 Labs</th>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td>
-            <ul>
-                <li>
-                    <a href="https://www.bcit.ca/study/outlines/20201047992">COMP 4711</a>
-                </li>
-            </ul>
+          <ul>
+            <li>
+              <a href="https://www.bcit.ca/study/outlines/20201047992"
+                >COMP 4711</a
+              >
+            </li>
+          </ul>
         </td>
         <td>
-            <ul>
-                <li>
-                    <a href="#">Lab 1</a>
-                </li>
-            </ul>
+          <ul>
+            <li>
+              <a href="https://michaelmhyu1013.github.io/#">Lab 2</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="https://michaelmhyu1013.github.io/#">Lab 3</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="https://michaelmhyu1013.github.io/#">Lab 4</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="https://michaelmhyu1013.github.io/#">Lab 5</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="https://michaelmhyu1013.github.io/#">Lab 1</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="https://michaelmhyu1013.github.io/#">Lab 1</a>
+            </li>
+          </ul>
         </td>
-    </tr>
-</table>
-</body>
+      </tr>
+    </table>
+  </body>
 </html>
