--- a/index.html
+++ b/index.html
@@ -34,6 +34,31 @@
                 >COMP 4711</a
               >
             </li>
+            <li>
+              <a href="https://www.bcit.ca/study/outlines/20201073687%22%3ECOMP"
+                >COMP 4735</a
+              >
+            </li>
+            <li>
+              <a href="https://www.bcit.ca/study/outlines/20201015508%22%3ECOMP"
+                >COMP 4981</a
+              >
+            </li>
+            <li>
+              <a href="https://www.bcit.ca/study/outlines/20201015509%22%3ECOMP"
+                >COMP 4985</a
+              >
+            </li>
+            <li>
+              <a href="https://www.bcit.ca/study/outlines/20201012716%22%3EBLAW"
+                >BLAW 3600</a
+              >
+            </li>
+            <li>
+              <a href="https://www.bcit.ca/study/outlines/20201086089%22%3EMATH"
+                >MATH 3042</a
+              >
+            </li>
           </ul>
         </td>
         <td>
