--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
               >
             </li>
             <li>
-              <a href="https://www.bcit.ca/study/outlines/20201073687%22%3ECOMP"
+              <a href="https://www.bcit.ca/study/outlines/20201073687"
                 >COMP 4735</a
               >
             </li>
             <li>
-              <a href="https://www.bcit.ca/study/outlines/20201015508%22%3ECOMP"
+              <a href="https://www.bcit.ca/study/outlines/20201015508"
                 >COMP 4981</a
               >
             </li>
             <li>
-              <a href="https://www.bcit.ca/study/outlines/20201015509%22%3ECOMP"
+              <a href="https://www.bcit.ca/study/outlines/20201015509"
                 >COMP 4985</a
               >
             </li>
             <li>
-              <a href="https://www.bcit.ca/study/outlines/20201012716%22%3EBLAW"
+              <a href="https://www.bcit.ca/study/outlines/20201012716"
                 >BLAW 3600</a
               >
             </li>
             <li>
-              <a href="https://www.bcit.ca/study/outlines/20201086089%22%3EMATH"
+              <a href="https://www.bcit.ca/study/outlines/20201086089"
                 >MATH 3042</a
               >
             </li>
