Add lab2 and linked to lab2 hyperlink

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <td>
           <ul>
             <li>
-              <a href="https://michaelmhyu1013.github.io/#">Lab 2</a>
+              <a href="./lab2/ui/index.html">Lab 2</a>
             </li>
           </ul>
           <ul>
