--- a/lab2/ui/index.html
+++ b/lab2/ui/index.html
@@ -1,120 +1,70 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
+    <head>
+        <meta charset="utf-8" />
 
-    <title>Template List</title>
-    <meta name="description" content="Template List" />
-    <meta name="author" content="MichaelYu" />
+        <title>Template List</title>
+        <meta name="description" content="Template List" />
+        <meta name="author" content="MichaelYu" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" type="text/css" href="../css/master.css"" />
+        <link rel="stylesheet" type="text/css" href="../css/avatar.css"" />
+        <link rel="stylesheet" type="text/css" href="../css/list.css" />
+        <link rel="stylesheet" type="text/css" href="../css/search.css" />
+        <link rel="stylesheet" type="text/css" href="../css/form.css" />
 
-    <link rel="stylesheet" type="text/css" href="../css/master.css"" /> <link
-    rel="stylesheet" type="text/css" href="../css/avatar.css"" />
-    <link rel="stylesheet" type="text/css" href="../css/list.css" />
-    <link rel="stylesheet" type="text/css" href="../css/search.css" />
-  </head>
+        <script src="../../js/list.js" defer></script>
+    </head>
 
-  <body>
-    <div class="container">
-      <div class="search-component">
-        <div class="search-header">
-          <p>
-            Artist Directory
-          </p>
+    <body>
+        <div class="container">
+            <div class="search-component">
+                <div class="search-header">
+                    <p>
+                        Artist Directory
+                    </p>
+                </div>
+                <div class="search-actions">
+                    <div class="search-input">
+                        <form action="/">
+                            <input type="text" name="artist_name" />
+                        </form>
+                    </div>
+                    <div class="add-person-btn">
+                        <button onclick="toggleAddArtistModal(this)">
+                            Add Artist
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="add-artist-form">
+                <form>
+                    <input
+                        id="artist-name"
+                        name="artist-name"
+                        text="text"
+                        placeholder="Artist Name"
+                    />
+                    <input
+                        id="artist-about"
+                        name="artist-about"
+                        text="text"
+                        placeholder="About Artist"
+                    />
+                    <input
+                        id="artist-image"
+                        name="artist-image"
+                        text="text"
+                        placeholder="Image URL"
+                    />
+                    <button type="button" onclick="addArtist(this)">Add</button>
+                </form>
+            </div>
+            <div class="list-avatar"></div>
         </div>
-        <div class="search-input">
-          <form action="/">
-            <input type="text" name="artist_name" />
-          </form>
-        </div>
-      </div>
-      <div class="list-avatar">
-        <div class="avatar">
-          <div class="avatar-img">
-            <img src="https://randomuser.me/api/portraits/med/women/10.jpg" />
-          </div>
-          <div class="avatar-description">
-            <div class="avatar-name">
-              <p>
-                Barot Bellingham
-              </p>
-            </div>
-            <div class="avatar-location">
-              <p>
-                Royal Academy of Painting and Sculpture
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="avatar">
-          <div class="avatar-img">
-            <img src="https://randomuser.me/api/portraits/med/women/11.jpg" />
-          </div>
-          <div class="avatar-description">
-            <div class="avatar-name">
-              <p>
-                Jonathan G. Ferrar II
-              </p>
-            </div>
-            <div class="avatar-location">
-              <p>
-                Artist to Watch in 2012
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="avatar">
-          <div class="avatar-img">
-            <img src="https://randomuser.me/api/portraits/med/women/12.jpg" />
-          </div>
-          <div class="avatar-description">
-            <div class="avatar-name">
-              <p>
-                Hilary Hewitt Goldwynn-Post
-              </p>
-            </div>
-            <div class="avatar-location">
-              <p>
-                New York University
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="avatar">
-          <div class="avatar-img">
-            <img src="https://randomuser.me/api/portraits/med/women/13.jpg" />
-          </div>
-          <div class="avatar-description">
-            <div class="avatar-name">
-              <p>
-                Hassum Harrod
-              </p>
-            </div>
-            <div class="avatar-location">
-              <p>
-                Art College in New Delhi
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="avatar">
-          <div class="avatar-img">
-            <img src="https://randomuser.me/api/portraits/med/women/14.jpg" />
-          </div>
-          <div class="avatar-description">
-            <div class="avatar-name">
-              <p>
-                Jennifer Jerome
-              </p>
-            </div>
-            <div class="avatar-location">
-              <p>
-                Professional memer at BCIT
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+    </body>
 </html>
