--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         <td>
           <ul>
             <li>
-              <a href="https://michaelmhyu1013.github.io/lab2/ui/index.html">Lab 2</a>
+              <a href="https://michaelmhyu1013.github.io/ui/index.html">Lab 2</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="https://michaelmhyu1013.github.io/#">Lab 3</a>
+              <a href="https://michaelmhyu1013.github.io/ui/index.html">Lab 3</a>
             </li>
           </ul>
           <ul>
